- Added the filter gravityflow_step_status_evaluation_approval to allow the status evaluation of approval step to check custom logic (X of Y approvals).
- Added the "Display all fields except selected" choice to the Display Fields setting.
- Updated the existing choice labels in the Display Fields setting to "Display all fields" and "Hide all fields except selected".
- Fixed editable Post Image field not being populated with the current entry value on the User Input step.
- Fixed editable Post Image field value retaining the previous image URL on entry update if the step failed validation.
- Fixed status export .csv to include duration as a separate column so it is consistent with status export table info.
- Fixed a PHP warning for the Discussion field.
- Fixed an issue with the approval step for assignees added via custom code.
- Fixed some merge tags such as {created_by} being replaced in assignee notifications before the entry was available.